chore: fix alignment of PDP top header

--- a/themes/Integrative Nutrition/css/objects/_add-to-cart.css
+++ b/themes/Integrative Nutrition/css/objects/_add-to-cart.css
@@ -238,6 +238,7 @@
 
 .pdp-top-content-top > div {
   display: flex;
+  align-items: baseline;
   margin-bottom: 10px;
 }
 
